# Picture-tool

./: CMakeLists.txt  PineapplePictures.pro  README.md  appveyor.yml  bottombuttongroup.cpp  bottombuttongroup.h  graphicsscene.cpp  graphicsscene.h  graphicsview.cpp  graphicsview.h  main.cpp  mainwindow.cpp  mainwindow.h  navigatorview.cpp  navigatorview.h  opacityhelper.cpp  opacityhelper.h  pineapple-pictures.desktop  resources.qrc  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  toolbutton.cpp  toolbutton.h
.github/workflows/: ubuntu.yml
languages/: PineapplePictures_zh_CN.ts
